<resources>
    <string name="app_name">Just Java</string>
    <string name="order_button">order</string>
    <string name="number">0</string>
    <string name="quantity">Quantity</string>
    <string name="dimen">dimen</string>
    <string name="just_line">0</string>
    <string name="quantity_text_view">quantity</string>
    <string name="price">Order Summary</string>
    <string name="price_line">0 р.</string>
    <string name="plusButton">+</string>
    <string name="minusButton">-</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
</resources>
